--- a/doge.html
+++ b/doge.html
@@ -4,8 +4,6 @@
 		<title>Tau Prolog - Example: My little doge</title>
 		<meta charset="utf-8">
 		<link href="doge.css" rel="stylesheet">
-		<script type="text/javascript" src="../../modules/core.js"></script>
-		<script type="text/javascript" src="../../modules/dom.js"></script>
 		<script type="text/prolog" id="doge.pl">
 :- use_module(library(dom)).
 
@@ -90,21 +88,23 @@ init :-
 				<div class="control" id="control-p">p (poop)</div>
 			</div>
 		</div>
+		<script src="/wasm/swipl-bundle.js"></script>
 		<script type="text/javascript">
-			// Create session
-			var session = pl.create(1000);
-			// Consult program
-			session.consult("doge.pl", {
-				success: function() {
-					// Query goal
-					session.query("init.", {
-						success: function() {
-							// Find answers
-							session.answer();
-						}
-					});
-				}
-			});
+let Prolog;
+let Module;
+var options = {
+    arguments: ["-q"],
+    locateFile: (file) => '/wasm/' + file,
+    on_output: print
+};
+
+SWIPL(options).then((module) =>
+{ Module = module;
+  Prolog = Module.prolog;
+
+  Prolog.load_scripts().then(() =>
+    Prolog.call("init"));
+});
 		</script>
 
 	</body>
