--- a/doge.html
+++ b/doge.html
@@ -102,7 +102,7 @@ Jan Wielemaker.
 
 <script src="/wasm/swipl-bundle.js"></script>
 <script type="text/javascript">
-aaaddddddconst options = {
+const options = {
     arguments: ["-q"]
 };
 
