Enable Tau compatibility

--- a/doge.html
+++ b/doge.html
@@ -5,6 +5,7 @@
 		<meta charset="utf-8">
 		<link href="doge.css" rel="stylesheet">
 		<script type="text/prolog" id="doge.pl">
+:- expects_dialect(tau).
 :- use_module(library(dom)).
 
 % move/3
